feat: construindo categorias e adicionando um middleware que forca sempre retornar resposta em json
