# app/Models/Categories.php
@@ -15,6 +15,7 @@ class Categories extends Model
     protected $fillable = [
         'name',
         'description',
+        'restaurant_id',
         'active'
     ];
 
